# competitor_analysis

./: .env  .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  ovhllm.py  pyproject.toml
docs/: PRD.md  TIMELINE.md
src/: app.py  firecrawl_service.py  models.py  prompts.py  workflow.py
src/agents/: __init__.py  cli.py  graph.py  llm.py  planner.py  prompts.py  researcher.py  state.py  strategist.py
src/config/: settings.py
src/memory/: __init__.py  store.py
src/tools/: __init__.py  tavily_search.py  web_scraper.py
tests/: test_agent_skeletons.py  test_config.py  test_e2e.py  test_graph.py  test_hitl.py  test_integration.py  test_llm_integration.py  test_memory.py  test_ovhllm.py  test_researcher.py  test_state.py  test_tools.py
